[package]
name = "orbfont"
description = "Orbital font rendering"
repository = "https://github.com/redox-os/orbfont"
version = "0.1.2"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies]
orbclient = {git = "git://github.com/LazyOxen/orbclient", branch="lin_gradient"}
rusttype = "0.2"
